# ros2_robot_control

./: .gitignore  README.md
applications/: CMakeLists.txt  package.xml
applications/config/: parameters.yaml  simulation_params.yaml
applications/config/fr3/: fr3_control.yaml
applications/config/ur5e/: kinematics@EasySurg.yaml  simulation_params.yaml  ur.urdf.xacro  ur_control.yaml
applications/launch/: fr3_control.launch.py  simulation.launch.py  simulation_fr3.launch.py  simulation_ur.launch.py  ur_control.launch.py
applications/meshes/: driller.stl
applications/urdf/: end_effector.urdf.xacro
control_msgs/: CMakeLists.txt
control_node/: CMakeLists.txt  package.xml
control_node/config/: control_params.yaml
control_node/include/control_node/: control_manager.h
control_node/src/: control_manager.cpp  control_node.cpp
controller_interface/: CMakeLists.txt
controller_interface/include/controller_interface/: controller_interface.hpp
controller_interface/src/: controller_interface.cpp
controllers/: CMakeLists.txt  package.xml  plugins.xml
controllers/src/: admittance_controller.cpp  cartesian_impedance_pd_controller.cpp  cartesian_impedance_pdplus_controller.cpp  cartesian_motion_controller.cpp  cartesian_trajectory_controller.cpp  dummy_controller.cpp  force_drag_controller.cpp  force_drag_dev_controller.cpp  forward_controller.cpp  forward_controller2.cpp  joint_impedance_controller.cpp  joint_motion_controller.cpp  med7_controller.cpp  rcm_controller.cpp  realtime_test_controller.cpp  robot_state_broadcaster.cpp  torque_controller.cpp  virtual_fixture_general_controller.cpp  virtual_fixture_general_pose_controller.cpp  virtual_fixture_line_controller.cpp  virtual_fixture_plane_controller.cpp
controllers/test/: debug_all.cpp  test_cartesian_controller.cpp  test_controller.cpp  test_forward_controller.cpp  test_joint_controller.cpp  test_trajectory_controller.cpp  tool_path_planning_test.cpp
controllers/utility/: movej.cpp  movel.cpp
hardware_interface/: CMakeLists.txt
hardware_interface/include/hardware_interface/: command_interface.hpp  ft_sensor_interface.hpp  hardware_interface.hpp  robot_interface.hpp  sensor_interface.hpp  state_interface.hpp
hardware_interface/src/: ft_sensor_interface.cpp  hardware_interface.cpp  robot_interface.cpp  sensor_interface.cpp
hardwares/: CMakeLists.txt  package.xml  plugins.xml
hardwares/config/: dummy_control.yaml  fc3_control.yaml  med7_control.yaml  ur_control.yaml
hardwares/config/ur5e@B211/: view_robot.rviz
hardwares/launch/: dummy_control.launch.py  fc3_control.launch.py  med7_control.launch.py  ur_control.launch.py
hardwares/src/: fc3_robot.cpp  ft_ati_sensor.cpp  ft_dummy_sensor.cpp  ft_kunwei_sensor.cpp  ft_sr_sensor.cpp  med7_robot.cpp  simulation_robot.cpp  ur_robot.cpp
hardwares/src/libfri/include/: friLBRCommand.h  med7client.hpp
hardwares/src/libfri/lib/: libFRIClient.sa
hardwares/src/sr/: sriCommATParser.cpp  sriCommATParser.h  sriCommCircularBuffer.cpp  sriCommDefine.h  sriCommM8218Parser.cpp  sriCommM8218Parser.h  sriCommManager.cpp  sriCommManager.h  sriCommParser.cpp  sriCommParser.h  sriCommTCPClient.cpp  sriCommTCPClient.h  sriRDTcpClientDemo.cpp
hardwares/test/: test_hardware.cpp
kuka_client/: CMakeLists.txt  package.xml
kuka_client/include/kuka_client/: IRDFClient.h
kuka_client/src/: IRDFClient.cpp
kuka_client/test/: kuka_fri_test.cpp
kuka_fri/: CMakeLists.txt  README.md  package.xml
kuka_fri/include/kuka_fri/: med7client.hpp
kuka_fri/src/: med7client.cpp
path_planner/: CMakeLists.txt  package.xml
path_planner/config/: tooth_after_boundary_edge.yaml  tooth_after_plane_slicer.yaml
path_planner/include/path_planner/: tpp_utils.hpp
path_planner/scripts/: export_noether_path.bash  setup_libs.bash
path_planner/src/: tpp_utils.cpp
path_planner/test/: debug_all.cpp  icp_test.cpp  path_generator.cpp
pyhelper/: package.xml  setup.cfg  setup.py
pyhelper/pyhelper/: data_plotter.py
robot_control_msgs/: CMakeLists.txt  package.xml
robot_control_msgs/action/: RobotMotion.action
robot_control_msgs/msg/: RobotState.msg  VectorData.msg
robot_control_msgs/srv/: ControlCommand.srv
robot_controller_interface/: CMakeLists.txt  package.xml
robot_controller_interface/include/robot_controller_interface/: controller_interface.hpp
robot_controller_interface/src/: controller_interface.cpp
robot_gui/: CMakeLists.txt  package.xml
robot_gui/src/: RobotGUIMainWindow.cpp  RobotGUIMainWindow.h  RobotGUIMainWindow.ui  main.cpp
robot_hardware_interface/: CMakeLists.txt  package.xml
robot_hardware_interface/include/robot_hardware_interface/: hardware_interface.hpp  robot_interface.hpp  sensor_interface.hpp
robot_hardware_interface/src/: hardware_interface.cpp  robot_interface.cpp  sensor_interface.cpp
robot_math/: CMakeLists.txt
robot_math/src/: robot_math.cpp
robot_math/test/: main.cpp  visualize.m  visualize.py
robot_monitor/: CMakeLists.txt  package.xml
robot_monitor/src/: mainwindow.cpp  mainwindow.h
robot_msgs/: CMakeLists.txt  package.xml
ros2_utility/: CMakeLists.txt  package.xml
ros2_utility/include/ros2_utility/: data_comm.hpp  data_logger.hpp  disturbance_observer.hpp  file_utils.hpp  math_utils.hpp  ros2_visual_tools.hpp  sliding_window.hpp  symbolic_diffentiator.hpp  transform_interpolator.hpp
ros2_utility/scripts/: setup_environment.bash  setup_github.bash  setup_libs.bash  setup_omega7.bash  setup_realtime.bash  setup_ros2.bash  setup_rtde.bash  ur_driver_launch.bash
ros2_utility/src/: data_comm.cpp  disturbance_observer.cpp  file_utils.cpp  math_utils.cpp  ros2_visual_tools.cpp  sliding_window.cpp  symbolic_diffentiator.cpp  transform_interpolator.cpp
task_node/: CMakeLists.txt  package.xml
task_node/config/: fr3.json  panda_correct.json  ur_control.yaml
task_node/include/: DataComm.h
task_node/launch/: task.launch.py
task_node/src/: DataComm.h  franka_rcm.cpp  task_node.cpp  ur_bph.cpp
task_node/src/utils/: DataComm.cpp
vs_code_config/: c_cpp_properties.json  launch.json  tasks.json
(+9 files in other folders)
